--- a/8.html
+++ b/8.html
@@ -10,7 +10,131 @@
 </head>
 <body>
     <div class="content">
-        Кудряшов скатинка
+        Тема  делегирования становится тем более  актуальной для руководителя, чем  более сложные задачи перед ним стоят, и чем крупнее становится бизнес, в котором он участвует. Однако бесспорно, навыки делегирования полномочий являются обязательными и необходимыми для любого менеджера, стремящегося добиться успеха.<br>
+<br>
+    В теории управления общепризнанным является "золотое правило": самое важное умение руководителя - это получение нужных ему результатов через своих подчиненных. В той мере, в какой он умело передает свои полномочия исполнителям, он эффективно руководит. Чем больше и чаще передается работа вместе с частью ответственности, тем выше результаты организации в целом.<br>
+<br>
+    Кроме того, мировой опыт показывает, что  в компании, управляемой собственником, гораздо меньше внимания уделяется  внутреннему развитию, так как  главная сосредоточенность – на росте прибыли, а инвестиции в основной капитал – информационные системы и персонал – игнорируются, а без этого невозможно полнокровное развитие организации.<br>
+<br>
+    Целью написания данного реферата определение сущности делегирования полномочий, его базовых принципах, правилах и ошибках.<br>
+<br>
+    Для достижения поставленной цели необходимо выполнить ряд следующих задач:<br>
+<br>
+Охарактеризовать сущность делегирования полномочий<br>
+Сформулировать основные правила и принципы делегирования полномочий<br>
+Выявить причины нежелания делегировать полномочия<br>
+Обозначить типичные ошибки делегирования полномочий<br><br>
+ПОНЯТИЕ И СУЩНОСТЬ ДЕЛЕГИРОВАНИЯ ПОЛНОМОЧИЙ<br>
+ <br>
+    Делегирование, как термин, используемый в теории управления, означает передачу задач  и полномочий лицу, которое принимает  на себя ответственность за их выполнение.<br>
+<br>
+    Суть  делегирования состоит в том, что руководитель предоставляет  подчиненным свободу действий в  решении тех или иных вопросов, специальных заданий, т.е. передает  им часть своих полномочий, при  этом всю ответственность, как правило, продолжает нести этот руководитель.<br>
+<br>
+    Это методология бизнеса, в которой  сотрудникам предоставляются полномочия и ответственность за решения  на том уровне, на котором они  действуют [1, c. 452-453].<br>
+<br>
+    Делегирование полномочий предполагает, что менеджер не является авторитарным руководителем, принимающим решения единолично, а передает часть своих полномочий подчиненным, одновременно обучая их. Делегирование полномочий основано на понимании того, что проблемы лучше всего решают сами люди, работающие над проблемой, а не вышестоящее руководство. Этот довод разумен, так как, чем выше «поднимаешься» в организации, тем меньше знаешь о рабочих проблемах.<br>
+<br>
+    Поэтому суть делегирования состоит не в  формировании набора инструкций, которым  должны неукоснительно следовать подчиненные, а в предоставлении им полномочий принимать в некоторых ситуациях самостоятельные решения без какого-либо обращения к руководителю [2].<br>
+<br>
+    Цели  делегирования:<br>
+<br>
+Разгрузить вышестоящих  руководителей, освободить их от текучки и создать наилучшие условия для решения стратегических и перспективных задач управления.<br>
+Повысить дееспособность нижестоящих звеньев.<br>
+Активизировать «человеческий фактор», увеличить вовлеченность и заинтересованность работников [1, c. 454].<br>
+    Делегирование полномочий – это передача полномочий лицу, которое берет на себя ответственность за решение определенных задач, и предполагает формирование у последнего статуса лица, принимающего решение.<br>
+<br>
+    Делегирование полномочий и задач порождает  в организации проблему распределения  ответственности. Под ответственностью управления будем понимать обязательство активного элемента структуры управления (работника) выполнять задачи, присущие занимаемой должности, и отвечать за результаты своей деятельности.<br>
+<br>
+    При этом следует различать ответственность  руководителя и исполнителя:<br>
+<br>
+    • ответственность исполнителя характеризует  обязательство работника выполнять  данные ему задачи и отвечать за результаты своего труда;<br>
+<br>
+    • ответственность руководителя –  обязательство отвечать за решение  задач управления в соответствии с глобальными целями организации и эффективностью управленческого труда [2].<br>
+<br>
+    Сущность  делегирования полномочий проявляется  также в его принципах и  правилах, которым оно должно отвечать. Рассмотрим их далее. <br>
+ 2. ОСНОВНЫЕ  ПРАВИЛА И ПРИНЦИПЫ ДЕЛЕГИРОВАНИЯ  ПОЛНОМОЧИЙ <br>
+ <br>
+<br>
+Обстоятельства  переменчивы, принципы никогда.<br>
+<br>
+<br>
+    Рассматриваемые ниже принципы делегирования полномочий являются основополагающими для правильного делегирования полномочий. Несоблюдение  их на практике может привести к тому, что  делегирование  будет неэффективным, организация нежизнеспособной, а процесс управления значительно затруднится. <br>
+    1. Принцип делегирования на основе ожидаемых результатов.<br>
+<br>
+    Поскольку смысл полномочий заключается в предоставлении  управляющему некоего инструмента для внесения соответствующего вклада в дело достижения целей предприятия, то полномочия, делегируемые    индивидуальному управляющему, должны быть достаточными для   обеспечения возможности достижения ожидаемых результатов. Слишком  много управляющих стремится разделить и дефинировать полномочия по   объему делегируемых или приобретаемых прав, вместо того чтобы вначале  понять те цели, которые необходимо достигнуть, а только затем определить   свободу действий, необходимую для этого. Только так управляющий   способен делегировать полномочия в четком соответствии с предъявляемыми им потом требованиями к подчиненному. Часто руководитель имеет представление о том, что необходимо сделать, но не задумывается над тем,   располагает ли подчиненный необходимыми для этого полномочиями. Порой он просто не хочет признать, что выполнение задачи требует   предоставления большей свободы действий подчиненному, также нечетко представляет себе ожидаемые результаты. Поэтому нет ничего  удивительного, что на предприятиях получило распространение ошибочное представление о делегировании "ответственности".<br>
+<br>
+    Делегирование в соответствии с ожидаемыми результатами предполагает, что цели установлены, а планы разработаны, что они доведены до сведения подчиненных и поняты ими, что введены соответствующие  должности,  которые будут способствовать выполнению поставленных задач [4].  <br>
+<br>
+    2. Принцип функциональной дефиниции.<br>
+<br>
+    Структурное деление – это группировка видов деятельности,  обеспечивающая достижение  поставленных  целей,  и  управляющий  каждого  из  подразделений должен обладать полномочиями, необходимыми для  координации  действий  этого подразделения  с  предприятием   в   целом.   Исходя   из   этого,   принцип функциональной дефиниции означает, что: чем яснее  определены  ожидаемые  от управляющего или структурного подразделения результаты, чем четче  и  полнее определены направления  их  деятельности  и  делегированные  организационные полномочия, чем яснее осознаны должностные и  информационные  взаимосвязи  с другими управляющими и подразделениями,  тем больший вклад  способны  внести эти управляющие и структурные подразделения в реализацию целей  предприятия.<br>
+<br>
+    Несоблюдение  данного принципа способно  вызвать  путаницу  и неразбериху  в вопросе о том, что именно и от кого именно следует ожидать.  Данный  принцип (который относится и к делегированию и к структурному  делению),  будучи концептуально весьма простым, зачастую трудно применим на  практике.  Четкое определение содержания работы и делегирование необходимых для ее  выполнения полномочий в большинстве случаев требуют  терпения,  высокого  интеллекта  и ясного представления о целях  и  планах.  Ясно,  что  весьма  непросто  дать определение   содержания   работы,   если   у   руководителя   нет   четкого представления о том, какие результаты он хочет получить. <br>
+ <br>
+ <br>
+     <br>
+<br>
+    3. Скалярный принцип.<br>
+<br>
+    Скалярный принцип относится к цепочке прямых должностных  отношений руководителей и подчиненных в масштабе всей организации. Всегда должно быть лицо, обладающее верховной властью в организации.  Чем отчетливее линия должностной связи высшего управляющего с каждым  из подчиненных, тем эффективнее процесс принятия решений и коммуникация.<br>
+<br>
+      Данная шкала описывается Файолом  как: «...цепочка руководителей от  высшего управляющего до низших. Линия полномочий – это путь, по которому проходят (через каждое звено в цепочке) все коммуникации от  высшего управляющего к низшим и наоборот. Это обусловливается как потребностями в поддержании связи, так и принципом единоначалия, однако он не всегда является кратчайшим. В крупных концернах, и особенно в правительственных, он порой угрожающе длинен».<br>
+<br>
+    Ясное понимание скалярного принципа – есть необходимое условие для нормального функционирования организации. Подчиненные должны знать,  во-первых, кто делегирует им полномочия, а во-вторых, на чье усмотрение  они должны передавать решение проблем, выходящих за рамки их полномочий. И хотя командная цепочка вполне может использоваться  самостоятельно для передачи только информации, отказ от нее при принятии решений приводит к нарушению системы принятия решений и подрыву самой системы управления [4]. <br>
+    4. Принцип уровня полномочий.<br>
+<br>
+    Принцип уровня полномочий вытекает из совокупности принципа функциональной дефиниции и скалярного принципа. На каждом  организационном уровне имеются полномочия для принятия решений в рамках компетенции предприятия. Принцип уровня полномочий означает,   что: сохранение эффективности делегирования требует, чтобы решения в  пределах полномочий отдельных сотрудников принимались ими, а не  переадресовывались на высшие организационные уровни. Другими словами,  на каждом уровне управляющие должны принимать все те решения, на которые у них хватает полномочий, а на усмотрение своего руководства передавать решение лишь тех вопросов, которые выходят за рамки их компетенции. Часто высшие управляющие, утверждая, что прекрасно понимают всю важность делегирования полномочий вниз дают понять, что гораздо большую тревогу они испытывают в связи с распространением среди подчиненных практики делегирования "вверх". Иначе говоря, как указал в беседе с авторами один из управляющих высокого звена, часто случается, что, поручив решение той или иной проблемы своим подчиненным, высшие управляющие через несколько дней или недель обнаруживают, что вопрос  вновь передан на их усмотрение. Очевидно, что во избежание этого необходимо не допускать повторной переадресации проблем вверх. Если право  принятия решения делегировано должным образом, то  руководителю нe следует поддаваться искушению принять решение самому. Подчиненные  обычно быстро уясняют, кто из руководителей охотно принимает решения за них.<br>
+5. Принцип единоначалия.<br>
+<br>
+    Одним из основных принципов управления является принцип единоначалия, который формулируется следующим образом: чем полнее  взаимосвязь подчинения подчиненного с руководителем, тем меньше   вероятность получения им противоречивых указаний и тем выше чувство персональной ответственности за результаты работы. При рассмотрении  вопроса делегирования полномочий предполагалось, что (за исключением  случаев обязательного разделения полномочий) право свободы действия в  определенной области деятельности передается подчиненному только одним  руководителем. Несмотря на то, что подчиненный может в принципе получить полномочия от двух или более руководителей и соответственно быть подотчетен им всем, существенные трудности, с которыми сопряжена  работа в подчинении двух или более руководителей, очевидны. Поскольку  принимаемое обязательство по существу носит персональный характер,  делегирование несколькими руководителями полномочий одному человеку  часто приводит к противоречиям, как в полномочиях, так и в ответственности. Принцип единоначалия весьма полезен для внесения ясности в систему взаимосвязей  полномочия – ответственность [4]. <br>
+<br>
+    6. Принцип безусловной ответственности.<br>
+<br>
+    Поскольку ответственность, будучи взятым на себя обязательством, не может быть делегирована, то ни один руководитель не может за счет  делегирования освободиться от ответственности за деятельность подчиненных, так как именно он делегирует полномочия и распределяет  обязанности. Подчиненные, приняв поручение и получив необходимые для его выполнения полномочия, несут полную ответственность перед руководителями за свою деятельность; руководители же в свою очередь несут всю ответственность за организационную деятельность подчиненных. <br>
+<br>
+    7. Принцип соответствия полномочий и ответственности.<br>
+<br>
+    Поскольку полномочия есть право выполнять порученную работу, а ответственность – это обязательство выполнить ее, то отсюда логически вытекает, что полномочия должны соответствовать ответственности. Из  этого очевидного обстоятельства вытекает следующий принцип: ответственность за те или иные действия не может превышать предполагавшуюся объемом делегированных полномочий, но и не должна  быть меньше ее. Данное соответствие не носит математического характера, оно скорее пространственно- временного порядка, поскольку и полномочия, и ответственность касаются выполнения одной и той же задачи. Например, президент фирмы может поручить закупку сырья и оборудования, а также  наем работников вице-президенту по производству. Последний может осуществлять эту работу лишь в случае предоставления ему достаточной для выполнения этих задач свободы действий.<br>
+<br>
+    Вместе  с тем не следует наделять подчиненных и большими,  чем того  требуют их обязанности, полномочиями. Зачастую управляющие спрашивают с подчиненных за работу, для осуществления которой те не  имеют необходимых полномочий, что, конечно, в корне неправильно.  Бывает и так, что подчиненному делегируются достаточные для тех или иных действий полномочия, но контроль за их правильным использованием отсутствует. Однако в данном случае имеет место лишь неэффективное руководство, что не имеет никакого отношения к принципу соответствия полномочий и ответственности [4]. <br>
+<br>
+    Существуют следующие правила делегирования полномочий:<br>
+<br>
+Передавайте свои полномочия не из соображений престижа, а исключительно для пользы дела.<br>
+Используйте делегирование как средство усиления уверенности подчиненных в собственных силах.<br>
+Будьте готовы поддерживать своих делегатов.<br>
+Учитывайте возможность принятия не самых точных и просто ошибочных решений и включайте эти поправки в планы. Есть круг задач, которые должны решаться безошибочно. Нужно уметь идентифицировать такие задачи и не перепоручать их подчиненным.<br>
+Передавайте функции и полномочия непосредственно, чтобы избежать эффекта «испорченного телефона».<br>
+Критикуйте осторожно. При совершении ошибок в выполнении делегированных функций разбирайте объективное существо ошибки, а не личные недостатки и просчеты подчиненного. Требуйте не извинений, а объяснений обстоятельств, приведших к ошибке, и конструктивных предложений по исправлению положения.<br>
+Передав подчиненному определенные полномочия, не вмешивайтесь в его распоряжения до тех пор, пока не увидите возможности серьезных осложнений.<br>
+Принимайте на себя ответственность за все решения, которые ваши подчиненные сделали в соответствии с переданными им полномочиями [5].<br>
+3. ПРИЧИНЫ НЕЖЕЛАНИЯ ДЕЛЕГИРОВАТЬ ПОЛНОМОЧИЯ И ТИПИЧНЫЕ ОШИБКИ ДЕЛЕГИРОВАЯ ПОЛНОМОЧИЙ <br>
+    Сознание того, что чудесное было рядом<br>
+<br>
+      с нами, приходит  слишком поздно.<br>
+<br>
+  <br>
+<br>
+    Обозначим наиболее известные  причины нежелания делегировать полномочия:<br>
+<br>
+    Основная  причина негативного отношения  к проблеме (нежелание делегировать власть) – привычка видеть в подчиненных лишь исполнителей. Сами же руководители объясняют негативное отношение к передаче полномочий недостатком времени для разъяснения исполнителям того, что и как нужно делать.<br>
+<br>
+    Нередко руководитель боится потерять авторитет, передавая часть своих обязанностей подчиненным. Ведь распространено мнение, что он потому и стал начальником, что только ему по плечу соответствующие функции. Возможна и другая причина: "А вдруг они подумают, что я с этим делом не справлюсь или просто ленюсь и не хочу работать".<br>
+<br>
+    Один  из мотивов негативного отношения к делегированию полномочий – привычка, тяга к выполнению хорошо знакомых обязанностей. Т.е. работник, получивший более высокую должность продолжает, при этом заниматься привычной работой.<br>
+<br>
+    И, наконец, нередкая причина нежелания  делегировать полномочия – боязнь негативной реакции старшего начальника. «А вдруг он подумает, что сам я не могу справиться с этой задачей, не хочу серьезно работать, перепоручая свои обязанности подчиненным». И почва для такого опасения есть .<br>
+<br>
+    Существуют также следующие ошибки делегирования полномочий:<br>
+<br>
+1Неумение объяснить. От того, как подчиненный усвоил ваши первоначальные указания, зависит, справится ли он с задачей, ответственность за решение которой вы ему делегировали. Вместо вопроса «Все ли вы поняли?» лучше спросить: «Достаточно ли ясно я вам все объяснил?».<br>
+2Фиктивное делегирование. Не пытайтесь делегировать подчиненным те полномочия, которыми они уже владеют по своей должности. Это лишь дискредитирует и вас, и ваши указания.<br>
+3Ошибка в выборе делегата.<br>
+4Ворчливость. Никогда не высказывайте своего недовольства ходом дел, если у вас нет ясных деловых предложений.<br>
+5Несдержанность. В таком деликатном деле, как делегирование, излишнее проявление эмоций опасно. Хладнокровие и ровное обращение с коллегами необходимо на всех этапах делегирования.<br>
+6Делегирование группе функций и полномочий без определения индивидуальной ответственности: «Семь поваров супа не сварят».<br>
+7Боязнь «уронить» авторитет. Если вы чего-то не знаете — скажите об этом прямо. Правдивое признание в том, что и вы не знаете, как решить ту или иную задачу, не нанесет столь сильного удара вашему авторитету, как вы можете предполагать.<br>
+8Важнейшая и наиболее опасная ошибка заключается в перепоручении подчиненным объединяющей функции руководства. Верховным координатором деятельности многих людей является именно руководитель. Делегировать этот род функций – весьма опасный путь, который чреват крупными нарушениями в ритмичности и согласованности работы всего коллектива .
     </div>
     <div class="footer">
         <a href="index.html">Назад</a>
