добавено DLC (отбор кандидатов)

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         <li><a href="15.html">
             15. Управление организационной культурой. Якимов
         </a></li>
+        <li><a href="DLC-1.html">
+            DLC v0.1. Отбор кандидатов
+        </a></li>
     </ul>
     <!-- <div class="copy">
         Dimchik tech <img src="images/copy.jpg" alt="1" class="bebr" style="border-radius: 100%; width: 100px; height: 50px;">
